[package]
name = "jailbreak-11"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["cargo"] }
erdp = "0.1.0"
libc = "0.2.153"
macaddr = "1.0.1"
pretty-hex = "0.4.1"
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = "0.7.10"

[workspace]
members = ["payload"]
